--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express": "^4.18.2",
     "mysql": "^2.18.1",
     "mysql2": "^3.2.0",
+    "pusher": "^5.1.2",
     "sequelize": "^6.30.0"
   },
   "devDependencies": {
